--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,27 @@
 {
-	"name": "micschk/silverstripe-rightsidebar",
-	"description": "Allows adding a right-hand sidebar in the CMS to hold options/fields for the currently edited record",
-	"keywords": [
-		"silverstripe"
-	],
-	"type": "silverstripe-module",
-	"require": {
-		"silverstripe/cms": "^3.1.0"
-	},
-	"license": "BSD-2-Clause",
-	"authors": [
-		{
-			"name": "micschk"
-		}
-	],
-	"extra": {
-		"installer-name": "rightsidebar"
-	}
+    "name": "micschk/rightsidebar",
+    "description": "Allows adding a right-hand sidebar in the CMS to hold options/fields for the currently edited record",
+    "type": "silverstripe-vendormodule",
+    "minimum-stability": "dev",
+    "keywords": ["silverstripe"],
+		"license": "BSD-2-Clause",
+    "require": {
+        "silverstripe/cms": "~4.0",
+        "silverstripe/framework": "~4.0",
+        "silverstripe/vendor-plugin": "^1.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Restruct\\RightSidebar\\": "src/"
+        }
+    },
+    "extra": {
+			"branch-alias": {
+	      	"dev-master": "2.x-dev"
+	    },
+      "expose": [
+          "css",
+          "js"
+      ]
+    }
 }
