--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "restruct/rightsidebar",
+    "name": "restruct/silverstripe-rightsidebar",
     "description": "Allows adding a right-hand sidebar in the CMS to hold options/fields for the currently edited record",
     "type": "silverstripe-vendormodule",
     "authors": [{
